<resources>
    <string name="app_name">LogiWord</string>
    <string name="alphabet">ABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="menu">Menu</string>
    <string name="profile">Profile</string>
    <string name="mainMenuString">Main Menu</string>
    <string name="profileString">Profile</string>
    <string name="scoresString">Global Scores</string>
    <string name="localScoresString">My Scores</string>
    <string name="settingsString">Settings</string>
    <string name="friendListString">Friend List</string>
    <string name="singlePlayerString">Single Player</string>
    <string name="multiplayerString">Multiplayer</string>
    <string name="daily_challenge">daily challenge</string>
    <string name="difficulty">Difficulty</string>
    <string name="account_type">Logi Word Account</string>
    <string name="score">Score</string>
    <string name="word">Word</string>
    <string name="rank">Rank</string>
    <string name="name">Name</string>
    <string name="global_ranking_list">Global Ranking List</string>
    <string name="my_scores">My Scores</string>
    <string name="global_scores">Global Scores</string>
    <string name="settings">Settings</string>
    <string name="friend_list">Friend List</string>
    <string name="single_player">Single Player</string>
    <string name="change_username">Change Username</string>
    <string name="type_your_new_user_name_here">Type your new user name here</string>
    <string name="logiword">LogiWord</string>
    <string name="info_logiword_com">info@logiword.com</string>
</resources>
