<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_menu"
            android:icon="@drawable/ic_menu"
            android:title="@string/menu" />
        <item
            android:id="@+id/nav_scores"
            android:icon="@drawable/ic_scores_icon"
            android:title="@string/global_scores" />
        <item
            android:id="@+id/nav_local_scores"
            android:icon="@drawable/ic_scores_icon"
            android:title="@string/my_scores" />
        <item
            android:id="@+id/nav_friend_list"
            android:icon="@drawable/ic_friend_list"
            android:title="@string/friend_list" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_account_circle_black_24dp"
            android:title="@string/profile" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings" />
    </group>

</menu>